--- a/PAYMENT/pay.html
+++ b/PAYMENT/pay.html
@@ -25,14 +25,17 @@
         </div>
     </div>
     <div class="col2">
-        <label>Card Number</label>
-        <input class="number" type="text" ng-model="ncard" maxlength="19" onkeypress='return event.charCode >= 48 && event.charCode <= 57' />
-        <label>Cardholder name</label>
-        <input class="inputname" type="text" placeholder="" />
-        <label>Expiry date</label>
-        <input class="expire" type="text" placeholder="MM / YYYY" />
-        <label>Security Number</label>
-        <input class="ccv" type="text" placeholder="CVC" maxlength="3" onkeypress='return event.charCode >= 48 && event.charCode <= 57' />
-        <button class="buy"><i class="material-icons"></i> PAY NOW</button>
+            <form action="/payment" method = "POST" >
+                <label>Card Number</label>
+                <input class="number" type="text" name="cno" ng-model="ncard" maxlength="19" onkeypress='return event.charCode >= 48 && event.charCode <= 57' />
+                <label>Cardholder name</label>
+                <input class="inputname" type="text" name="cname" required placeholder="" />
+                <label>Expiry date</label>
+                <input class="expire" type="text" placeholder="MM / YYYY" name="date" />
+                <label>Security Number</label>
+                <input class="ccv" type="text" placeholder="CVC" name="cvv" maxlength="3" onkeypress='return event.charCode >= 48 && event.charCode <= 57' />
+                <input type="submit" class="buy" value="PAY NOW">
+                 
+            </form>
     </div>
 </div>
