--- a/MAIN/index.html
+++ b/MAIN/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
 
 </head>
 
@@ -19,15 +19,15 @@
 
     <header>
 
-        <a href="#" class="logo">i<span  class="fal fa-head-side"></span>Neuro</a>
+        <a href="#" class="logo">I<span  class="fal fa-head-side"></span>Neuro</a>
         <div id="menu" class="fas fa-bars"></div>
 
         <nav class="navbar">
-            <a class="active" href="#home">home</a>
+            <a class="active" href="#home">Home</a>
             <a href="#prevent">Symptoms</a>
             <a href="#appointment">Appointments</a>
-            <a href="#doctor">doctors</a>
-            <a href="Elements/cartpage/cart.html">Purchase</a>
+            <a href="#doctor">Doctors</a>
+            <a href="cart.html">Purchase</a>
         </nav>
 
     </header>
@@ -39,7 +39,7 @@
         <div class="content">
             <h1>Therapy Consulation</h1>
             <h3> Get the care you deserve.</h3>
-            <a href="Elements/LS/login.html" class="btn">LOGIN  /  SIGN  UP</a>
+            <a href="login.html" class="btn">LOGIN  /  SIGN  UP</a>
         </div>
 
     </section>
@@ -97,7 +97,8 @@
 
 
     <!-- Appointment section starts  -->
-    <form action="/appointment" onsubmit="return(validatedetails());"></form>
+
+
 
     <section class="appointment" id="appointment">
 
@@ -109,21 +110,21 @@
 
                 <h3 class="title">Your details for the appointment </h3>
 
-                <form action="SEND ADDRESS" id="ft-form" method="POST" accept-charset="UTF-8">
+                <form action="/appointment" id="ft-form" method="POST" accept-charset="UTF-8">
                     <fieldset>
 
                         <label>
                         Name
-                        <input type="text" name="name" required>
+                        <input type="text" name="name" required name="entry.364295968">
                       </label>
                         <div class="two-cols">
                             <label>
                           Email address
-                          <input type="email" name="email" required>
+                          <input type="email" name="email" required name="entry.304934206">
                         </label>
                             <label>
                           Phone number
-                          <input type="tel" name="phno">
+                          <input type="tel" name="phno" required name="entry.1661940655">
                         </label>
                         </div>
                     </fieldset>
@@ -132,9 +133,10 @@
                         <div class="two-cols">
                             <label>
                           Date
-                          <input type="date" name="appointment_date" required>
+                          <input type="date" name="appointment_date" required name="entry.1735440850">
                         </label>
                             <div class="inline">
+
                                 <label>
                             <input type="hidden" name="morning_desired" value="no">
                             <input type="checkbox" name="morning_desired" value="yes">
@@ -145,29 +147,28 @@
                             <input type="checkbox" name="evening_desired" value="yes">
                             Evening [4:00PM-7:00PM]
                           </label>
+
                             </div>
                         </div>
                         <p><br>Confirmation requested by</p>
                         <div class="inline">
+
                             <label>
-                          <input type="radio" name="confirmation_by" value="email" checked>
+                          <input type="radio" name="confirm_by" value="email" checked>
                           Email
                         </label>
                             <label>
-                          <input type="radio" name="confirmation_by" value="phone">
+                          <input type="radio" name="confirm_by" value="phone">
                           Phone call
                         </label>
+
                         </div>
                     </fieldset>
                     <div class="btns">
-                        <a href="Elements/Payment/pay.html"></a>
-
-
                         <input type="text" name="_gotcha" value="" style="display:none;">
                         <input type="submit" value="Submit request">
 
-
-
+                        <!--<a href="Elements/Payment/pay.html"></a>-->
                     </div>
                 </form>
 
@@ -245,20 +246,20 @@
             </div>
 
             <div class="box">
-                <h3>follow us</h3>
-                <a href="#">facebook</a>
-                <a href="#">twitter</a>
-                <a href="#">instagram</a>
-                <a href="#">linkedin</a>
-                <a href="#">youtube</a>
+                <h3>Follow Us</h3>
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+                <a href="#">Linkedin</a>
+                <a href="#">Youtube</a>
             </div>
 
             <div class="box">
                 <div class="formBx">
-                    <form>
-                        <input type="text" name="" required placeholder="Full Name">
-                        <input type="email" name="" required placeholder="Email">
-                        <textarea placeholder="Your Message"></textarea>
+                    <form action="/contact" method="POST">
+                        <input type="text" name="name2" required placeholder="Full Name">
+                        <input type="email" name="email2" required placeholder="Email">
+                        <textarea placeholder="Your Message" name="message"></textarea>
                         <input type="submit" value="Send">
                     </form>
 
@@ -281,8 +282,8 @@
         <!-- jquery cdn link  -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <!-- custom js file link  -->
-        <script src="js/script.js"></script>
+        <!-- custom js file link -->
+        <script src="script.js"></script>
 
 
 </body>
